# clockqt

./: .gitignore  CMakeLists.txt  main.cpp  raspi_configure.sh
resources/: api-keys.csv.in
src/: CMakeLists.txt
src/AlarmPage/: alarmpage.cpp  alarmpage.h  alarmpage.ui
src/BackgroundPage/: .backgroundpage.cpp.swp  backgroundpage.cpp  backgroundpage.h  backgroundpage.ui
src/ClockPage/: clockpage.cpp  clockpage.h  clockpage.ui
src/Common/: common.cpp  common.h
src/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/MenuPage/: menupage.cpp  menupage.h  menupage.ui
src/TickerPage/: tickerpage.cpp  tickerpage.h  tickerpage.ui
